--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,16 @@
 
   <groupId>org.yamcs</groupId>
   <artifactId>yamcs-maven</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>Yamcs Maven Integration (parent)</name>
+  <url>https://www.yamcs.org</url>
+  <description>Yamcs Maven Integration</description>
+
+  <scm>
+    <url>https://github.com/yamcs/yamcs-maven</url>
+  </scm>
 
   <licenses>
     <license>
@@ -20,6 +26,13 @@
     <name>Space Applications Services</name>
     <url>https://www.spaceapplications.com</url>
   </organization>
+
+  <developers>
+    <developer>
+      <id>yamcs.org</id>
+      <name>Yamcs Team</name>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
