--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,5 @@ jobs:
         local-dir: docs
         github-token: $GITHUB_TOKEN
         keep-history: false  # Force-update single commit on gh-pages branch
+        on:
+          tags: true
