Fix ${yamcsVersion} escaping

--- a/yamcs-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/yamcs-archetype-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -22,7 +22,7 @@
     Update this to the latest Yamcs release.
     Check https://mvnrepository.com/artifact/org.yamcs/yamcs-core
     -->
-    <yamcsVersion>\${yamcsVersion}</yamcsVersion>
+    <yamcsVersion>${yamcsVersion}</yamcsVersion>
   </properties>
  
   <dependencies>
@@ -30,14 +30,14 @@
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-core</artifactId>
-      <version>${yamcsVersion}</version>
+      <version>\${yamcsVersion}</version>
       <scope>provided</scope>
     </dependency>
     <!-- Adding this dependency, enables the web interface. -->
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-web</artifactId>
-      <version>${yamcsVersion}</version>
+      <version>\${yamcsVersion}</version>
       <scope>provided</scope>
     </dependency>
     <!-- Uncomment to use Artemis in your project. -->
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-artemis</artifactId>
-      <version>${yamcsVersion}</version>
+      <version>\${yamcsVersion}</version>
       <scope>provided</scope>
     </dependency>
     -->
@@ -54,7 +54,7 @@
     <dependency>
       <groupId>org.yamcs</groupId>
       <artifactId>yamcs-tse</artifactId>
-      <version>${yamcsVersion}</version>
+      <version>\${yamcsVersion}</version>
       <scope>provided</scope>
     </dependency>
     -->
