--- a/yamcs-archetype-quickstart/pom.xml
+++ b/yamcs-archetype-quickstart/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.yamcs</groupId>
     <artifactId>yamcs-maven</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>yamcs-archetype-quickstart</artifactId>
