--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
 stages:
   - name: test
   - name: deploy
-    if: branch = master
+    if: branch = stable
 
 jobs:
   include:
@@ -25,5 +25,3 @@ jobs:
         local-dir: docs
         github-token: $GITHUB_TOKEN
         keep-history: false  # Force-update single commit on gh-pages branch
-        on:
-          tags: true
