--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ cache:
 stages:
   - name: test
   - name: deploy
-    if: branch = stable
 
 jobs:
   include:
@@ -25,3 +24,5 @@ jobs:
         local-dir: docs
         github-token: $GITHUB_TOKEN
         keep-history: false  # Force-update single commit on gh-pages branch
+        on:
+          branch: stable
