--- a/yamcs-maven-plugin/pom.xml
+++ b/yamcs-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.yamcs</groupId>
     <artifactId>yamcs-maven</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
   </parent>
 
   <artifactId>yamcs-maven-plugin</artifactId>
