--- a/yamcs-archetype-quickstart/pom.xml
+++ b/yamcs-archetype-quickstart/pom.xml
@@ -20,6 +20,10 @@
         <directory>src/main/resources</directory>
         <filtering>true</filtering>
       </resource>
+      <resource>
+        <directory>src/main/resources-unfiltered</directory>
+        <filtering>false</filtering>
+      </resource>
     </resources>
 
     <plugins>
