--- a/yamcs-archetype-quickstart/src/main/resources/archetype-resources/src/main/yamcs/etc/yamcs.yaml
+++ b/yamcs-archetype-quickstart/src/main/resources/archetype-resources/src/main/yamcs/etc/yamcs.yaml
@@ -3,5 +3,14 @@ services:
     args:
       port: 8090
 
+# This is where Yamcs will persist its data. Paths are resolved relative to where Yamcs is running
+# from (by default: target/yamcs). This means that `mvn clean` will remove also persisted data.
+# Change this property to an absolute path in case you want to persist your data.
+dataDir: yamcs-data
+
 instances:
-  - example
+  - \${artifactId}
+
+# Secret key unique to a particular Yamcs installation.
+# This is used to provide cryptographic signing.
+secretKey: changeme
