--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.yamcs</groupId>
   <artifactId>yamcs-maven-plugin</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.3</version>
   <packaging>maven-plugin</packaging>
 
   <name>Yamcs Maven Plugin</name>
@@ -38,7 +38,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <mavenVersion>3.0.3</mavenVersion>
     <pluginPluginVersion>3.3</pluginPluginVersion>
-    <yamcsVersion>4.10.4</yamcsVersion>
+    <yamcsVersion>4.10.8</yamcsVersion>
   </properties>
 
   <prerequisites>
