Avoid javadoc issues on-deploy

--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,12 @@
                 </goals>
               </execution>
             </executions>
+            <configuration>
+              <source>8</source>
+              <additionalJOptions>
+                <additionalJOption>--no-module-directories</additionalJOption>
+              </additionalJOptions>
+            </configuration>
           </plugin>
         </plugins>
       </build>
