--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <mavenVersion>3.6.3</mavenVersion>
     <pluginPluginVersion>3.6.4</pluginPluginVersion>
     <yamcsVersion>5.9.6</yamcsVersion>
-    <protobufVersion>3.19.4</protobufVersion>
+    <protobufVersion>3.19.6</protobufVersion>
   </properties>
 
   <prerequisites>
@@ -89,7 +89,7 @@
       <dependency>
         <groupId>com.google.protobuf</groupId>
         <artifactId>protobuf-java</artifactId>
-        <version>3.19.4</version>
+        <version>${protobufVersion}</version>
       </dependency>
       <dependency>
         <groupId>com.thoughtworks.qdox</groupId>
