--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.yamcs</groupId>
   <artifactId>yamcs-maven-plugin</artifactId>
-  <version>1.3.2-SNAPSHOT</version>
+  <version>1.3.2</version>
   <packaging>maven-plugin</packaging>
 
   <name>Yamcs Maven Plugin</name>
@@ -37,7 +37,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <mavenVersion>3.6.3</mavenVersion>
     <pluginPluginVersion>3.6.4</pluginPluginVersion>
-    <yamcsVersion>5.9.6</yamcsVersion>
+    <yamcsVersion>5.10.0</yamcsVersion>
     <protobufVersion>3.19.6</protobufVersion>
   </properties>
 
